--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 				</canvas>
 		    </section>
 	    <footer>
-		    It follows The mouse
+		    The swarm follows the mouse
 	    </footer>
 	</body>
 </html>
